  restarting WeeChat, for delayed restoration)
* core: fix display of zoomed/merged buffer (with number >= 2) after switching
  to it (bug #37593)
* core: fix display problem when option weechat.look.prefix_same_nick is set
  (problem with nick displayed in first line of screen) (bug #37556)
* core: fix wrapping of words with wide chars (the break was made before the
  correct position)
* api: allow creation of structure with hdata_update (allowed for hdata
  "history")
* api: use hashtable "options" for command arguments in function
  hook_process_hashtable (optional, default is a split of string with command)
* api: do not call shell to execute command in hook_process (fix security
  problem when a plugin/script gives untrusted command) (bug #37764)
* api: add new function "string_eval_expression"
* api: connect with IPv6 by default in hook_connect (with fallback to IPv4),
  shuffle list of hosts for a same address, add argument "retry" for
  hook_connect, move "sock" from hook_connect arguments to callback of
  hook_connect (task #11205)
* alias: give higher priority to aliases (2000) so that they take precedence
  over an existing command
* aspell: ignore self and remote nicks in private buffers
* aspell: add signal "aspell_suggest" (sent when new suggestions are displayed)
* aspell: add bar items "aspell_dict" (dictionary used on current buffer) and
  "aspell_suggest" (suggestions for misspelled word at cursor), add option
  aspell.check.suggestions (task #12061)
* aspell: fix creation of spellers when number of dictionaries is different
  between two buffers
* irc: fix display of actions (/me) when they are received from a relay client
  (in channel and private buffers) (bug #38027)
* irc: fix memory leak when updating modes of channel
* irc: add tags "irc_nick1_xxx" and "irc_nick2_yyy" in message displayed for
  command "NICK"
* irc: return git version in CTCP VERSION and FINGER by default, add "$git"
  and "$versiongit" in format of CTCP replies